Add favicon, navbar logo, and implement navbar-top.ejs

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -42,8 +42,8 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="../../public/stylesheets/style.css">
 
-  <!-- Hockey player favicon accompanying title -->
-  <link rel="shortcut icon" href="https://img.icons8.com/color/48/000000/ice-hockey.png" type="image/x-icon">
+  <!-- Favicon accompanying title -->
+  <link rel="shortcut icon" href="../../public/images/favicon-32x32.png" type="image/x-icon">
 
   <title>Hockeyrats</title>
 
