--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
         <!-- Profile photo (centered in allocated 4/12 space) -->
         <div class="d-flex col-md-4 justify-content-center align-items-center">
           <!-- img-thumbnail for responsiveness -->
-          <img src="../public/images/joe-wagner-profile-800.jpg" class="img-thumbnail" alt="Coach Joe Wagner">
+          <img src="images/joe-wagner-profile-800.jpg" class="img-thumbnail" alt="Coach Joe Wagner">
         </div>
 
         <!-- Profile text -->
