--- a/views/partials/navbar-top.ejs
+++ b/views/partials/navbar-top.ejs
@@ -4,7 +4,7 @@
   <div class="container">
     <!-- Puck logo Joe -->
     <a class="navbar-brand" href="/">
-      <img src="../../public/images/logo_navbar-240x40.png" class="img-fluid" alt="Hockeyrats navbar logo">
+      <img src="images/logo_navbar-240x40.png" class="img-fluid rounded-lg" alt="Hockeyrats navbar logo">
     </a>
 
     <!-- Navbar toggler/hamburger for smaller screens sizes -->
