--- a/views/partials/navbar-top.ejs
+++ b/views/partials/navbar-top.ejs
@@ -1,5 +1,5 @@
 <!-- Navbar at top of page: fixed-top to expand over content -->
-<nav class="navbar fixed-top navbar-expand-md navbar-dark" id="index-top-navbar">
+<nav class="navbar fixed-top navbar-expand-md navbar-dark" id="navbar-top">
   <!-- Container to center navbar contents -->
   <div class="container">
     <!-- Puck logo Joe -->
