--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,7 +22,8 @@ html {
   background-repeat: no-repeat;
 
   /* Padding so fixed-top navbar doesn't cover content */
-  padding-top: 56px;
+  /* padding-top: 56px; */
+  padding-top: 68px;
 
   /* Padding so fixed-bottom navbar doesn't cover content */
   padding-bottom: 56px;
@@ -56,7 +57,8 @@ html {
   background-repeat: no-repeat;
 
   /* Padding so fixed-top navbar doesn't cover content */
-  padding-top: 56px;
+  /* padding-top: 56px; */
+  padding-top: 68px;
 
   /* Padding so fixed-bottom navbar doesn't cover content */
   padding-bottom: 56px;
@@ -69,7 +71,8 @@ html {
   background-color: #c5baca;
 
   /* Padding so fixed-top navbar doesn't cover content */
-  padding-top: 56px;
+  /* padding-top: 56px; */
+  padding-top: 68px;
 
   /* Padding so fixed-bottom navbar doesn't cover content */
   padding-bottom: 56px;
