Implement contact route

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -79,3 +79,17 @@ html {
 
   font-family: 'Roboto Slab', sans-serif;
 }
+
+.body-contact {
+  /* Light purple */
+  background-color: #c5baca;
+
+  /* Padding so fixed-top navbar doesn't cover content */
+  /* padding-top: 56px; */
+  padding-top: 68px;
+
+  /* Padding so fixed-bottom navbar doesn't cover content */
+  padding-bottom: 56px;
+
+  font-family: 'Roboto Slab', sans-serif;
+}
