Use github images for FB and TWTR cards

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Hockeyrats">
   <meta property="og:description" content="The home of fanatics who live to train and play hockey. Pioneer of the R.A.T.S. training system.">
-  <meta property="og:image" content="https://drive.google.com/file/d/1seEEUhyFJvpzDaBjQd_Idx5tPLC_GZ_x/view?usp=sharing">
+  <meta property="og:image" content="https://github.com/jeffrylew/joe_wagner-hockey/blob/master/media/seong-stick-flex_fb-event_medium.jpg?raw=true">
   <meta property="og:image:width" content="3857">
   <meta property="og:image:height" content="2021">
   <meta property="og:image:alt" content="Hockey rat flexing a Bauer Nexus ADV hockey stick.">
@@ -26,7 +26,7 @@
   <meta name="twitter:card" content="Hockey rat flexing a Bauer Nexus ADV hockey stick.">
   <meta name="twitter:title" content="Hockeyrats">
   <meta name="twitter:description" content="The home of fanatics who live to train and play hockey. Pioneer of the R.A.T.S. training system.">
-  <meta name="twitter:image" content="https://drive.google.com/file/d/1MmYuuIBolbL6Bf01mAtedMZSwZiNVGiH/view?usp=sharing">
+  <meta name="twitter:image" content="https://github.com/jeffrylew/joe_wagner-hockey/blob/master/media/seong-stick-flex_twtr_medium.jpg?raw=true">
   <meta name="twitter:image:alt" content="Hockey rat flexing a Bauer Nexus ADV hockey stick.">
   <!-- <meta name="twitter:site" content="@site_username"> -->
 
