Fix Twitter card property

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,7 @@
 
     gtag('config', 'UA-161006658-1');
   </script>
-  
+
   <!-- Required meta tags -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,7 +33,7 @@
   <!-- <meta property="fb:app_id" content="app_id"> -->
 
   <!-- Twitter card -->
-  <meta name="twitter:card" content="Hockey rat flexing a Bauer Nexus ADV hockey stick.">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Hockeyrats">
   <meta name="twitter:description" content="The home of fanatics who live to train and play hockey. Pioneer of the R.A.T.S. training system.">
   <meta name="twitter:image" content="https://github.com/jeffrylew/joe_wagner-hockey/blob/master/media/seong-stick-flex_twtr_medium.jpg?raw=true">
