--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 
   <!-- Jumbotron -->
   <div class="container">
-    <div class="jumbotron">
+    <div class="jumbotron" id="jumbotron-index">
       <!-- Enclosing row so photo/text are responsive -->
       <div class="row">
         <!-- Profile photo (centered in allocated 4/12 space) -->
