--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,4 +4,7 @@
   <!-- Top navbar -->
   <%- include("partials/navbar-top.ejs") %>
 
+  <!-- Jumbotron containing group photo -->
+  <div class="jumbotron jumbotron-fluid py-0" id="jumbotron-about"></div>
+
 <%- include("partials/footer.ejs") %>
