Add new image of Joe Wagner and write content for about page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,6 +49,9 @@ html {
 }
 
 .body-about {
+  /* Light purple */
+  background-color: #c5baca;
+
   /* Full-body Profile */
   /* background-image: url("./../images/joe-wagner-about_medium.jpg");
 
