--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,7 +7,7 @@
   <!-- Jumbotron containing group photo -->
   <div class="jumbotron jumbotron-fluid py-0" id="jumbotron-about"></div>
 
-  <div class="container text-info">
+  <div class="container">
     <h1 class="display-4 text-center mb-5">About Us</h1>
 
     <div class="row align-items-start">
@@ -25,7 +25,7 @@
           <p>Someone whose life revolves around playing hockey.</p>
         </blockquote>
 
-        <hr class="pb-3">
+        <hr class="border-top border-light pb-3">
 
         <p class="pb-3">Hockeyrats is home to players who are fanatical about improving their game. We know the early morning grind leads to late-night victories.</p>
 
