--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -5,24 +5,24 @@
   <%- include("partials/navbar-top.ejs") %>
 
   <!-- Contact Information -->
-  <div class="container text-info my-2 justify-content-center">
+  <div class="container my-2 justify-content-center">
     <h1 class="display-4 text-center mb-4">Contact</h1>
 
     <div class="container col-10 col-md-8 col-xl-7">
       <p>For inquiries, please reach me at:</p>
       <ul>
         <li>
-          Call/Text <a class="text-primary" href="tel:+19088120636">(908) 812-0636</a>
+          Call/Text <a class="text-info" href="tel:+19088120636">(908) 812-0636</a>
         </li>
         <li>
-          <a class="text-primary" href="mailto:josephwagner74@yahoo.com">josephwagner74@yahoo.com</a>
+          <a class="text-info" href="mailto:josephwagner74@yahoo.com">josephwagner74@yahoo.com</a>
         </li>
       </ul>
 
       <h3>Ice Land Rink</h3>
       <ul>
         <li>
-          Call <a class="text-primary" href="tel:+16095886672">(609) 588-6672</a>
+          Call <a class="text-info" href="tel:+16095886672">(609) 588-6672</a>
         </li>
         <li>
           6 Tennis Ct, Hamilton Township, NJ 08619
