Add images for navbar/landing page. Update header.ejs/navbar-top.ejs/style.css

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,14 +2,7 @@
 <html lang="en-US">
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161006658-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-161006658-1');
-  </script>
+  <!-- TODO: Add script -->
 
   <!-- Required meta tags -->
   <meta charset="UTF-8">
@@ -17,31 +10,31 @@
 
   <!-- CMS/SEO -->
   <meta name="author" content="Jeffry Lew">
-  <meta name="description" content="Hockeyrats is home to fanatics who live to train and play hockey.">
+  <meta name="description" content="Woohan Hockey is the home of D1 hopefuls and the sickest dekes">
 
   <!-- Facebook card -->
-  <meta property="og:site_name" content="Hockeyrats">
-  <meta property="og:url" content="http://www.hockeyrats.com/">
+  <meta property="og:site_name" content="Woohan Hockey">
+  <meta property="og:url" content="http://www.woohanhockey.com/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Hockeyrats">
-  <meta property="og:description" content="The home of fanatics who live to train and play hockey. Pioneer of the R.A.T.S. training system.">
-  <meta property="og:image" content="https://github.com/jeffrylew/joe_wagner-hockey/blob/master/media/seong-stick-flex_fb-event_medium.jpg?raw=true">
-  <meta property="og:image:width" content="3857">
-  <meta property="og:image:height" content="2021">
-  <meta property="og:image:alt" content="Hockey rat flexing a Bauer Nexus ADV hockey stick.">
+  <meta property="og:title" content="Woohan Hockey">
+  <meta property="og:description" content="The home of D1 hopefuls and the sickest dekes">
+  <meta property="og:image" content="https://raw.githubusercontent.com/jeffrylew/joe_wagner-hockey/master/media/woohan_fb-event_medium_logo.jpg">
+  <meta property="og:image:width" content="4032">
+  <meta property="og:image:height" content="2268">
+  <meta property="og:image:alt" content="Seong stickhandling">
   <meta property="og:locale" content="en_US">
   <!-- <meta property="fb:app_id" content="app_id"> -->
 
   <!-- Twitter card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Hockeyrats">
-  <meta name="twitter:description" content="The home of fanatics who live to train and play hockey. Pioneer of the R.A.T.S. training system.">
-  <meta name="twitter:image" content="https://github.com/jeffrylew/joe_wagner-hockey/blob/master/media/seong-stick-flex_twtr_medium.jpg?raw=true">
-  <meta name="twitter:image:alt" content="Hockey rat flexing a Bauer Nexus ADV hockey stick.">
+  <meta name="twitter:title" content="Woohan Hockey">
+  <meta name="twitter:description" content="The home of D1 hopefuls and the sickest dekes">
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/jeffrylew/joe_wagner-hockey/master/media/woohan_twtr_medium_logo.jpg">
+  <meta name="twitter:image:alt" content="Seong stickhandling">
   <!-- <meta name="twitter:site" content="@site_username"> -->
 
-  <!-- Roboto Slab from Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&display=swap" rel="stylesheet">
+  <!-- Bad Script from Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -55,6 +48,6 @@
   <!-- Favicon accompanying title -->
   <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
 
-  <title>Hockeyrats</title>
+  <title>Woohan Hockey</title>
 
 </head>
