--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,36 +4,32 @@ html {
   height: 100%;
 }
 
-#navbar-top {
-  /* Carnellian */
-  background-color: #b31b1b;
-}
-
-/* .navbar-brand {
-  text-transform: uppercase;
-} */
-
-.body-index {
-  /* Seong flexing stick */
-  background-image: url("./../images/seong-stick-flex_medium.jpg");
-
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+body {
+  font-family: 'Bad Script', cursive;
 
   /* Padding so fixed-top navbar doesn't cover content */
-  /* padding-top: 56px; */
   padding-top: 68px;
 
   /* Padding so fixed-bottom navbar doesn't cover content */
   padding-bottom: 56px;
+}
 
-  font-family: 'Roboto Slab', sans-serif;
+#navbar-top {
+  background-color: black;
+}
+
+.body-index {
+  /* Seong stickhandling */
+  background-image: url("./../images/woohan_landing_cinematic_medium.jpg");
+
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 #jumbotron-index {
   /* Tritanopia color palette */
-  background-color: rgba(90, 75, 97, 0.85);
+  background-color: rgba(90, 75, 97, 0.70);
 
   /* White text color */
   color: white;
@@ -61,16 +57,6 @@ html {
   background-position: center top;
   background-size: cover;
   background-repeat: no-repeat; */
-
-  /* Padding so fixed-top navbar doesn't cover content */
-  /* padding-top: 56px; */
-  padding-top: 68px;
-
-  /* Padding so fixed-bottom navbar doesn't cover content */
-  padding-bottom: 56px;
-
-  font-family: 'Roboto Slab', sans-serif;
-  color: white;
 }
 
 #jumbotron-about {
@@ -90,16 +76,6 @@ html {
 
   /* Logo gray */
   background-color: #393e46;
-
-  /* Padding so fixed-top navbar doesn't cover content */
-  /* padding-top: 56px; */
-  padding-top: 68px;
-
-  /* Padding so fixed-bottom navbar doesn't cover content */
-  padding-bottom: 56px;
-
-  font-family: 'Roboto Slab', sans-serif;
-  color: white;
 }
 
 .body-contact {
@@ -108,14 +84,4 @@ html {
 
   /* Logo gray */
   background-color: #393e46;
-
-  /* Padding so fixed-top navbar doesn't cover content */
-  /* padding-top: 56px; */
-  padding-top: 68px;
-
-  /* Padding so fixed-bottom navbar doesn't cover content */
-  padding-bottom: 56px;
-
-  font-family: 'Roboto Slab', sans-serif;
-  color: white;
 }
