--- a/views/partials/navbar-top.ejs
+++ b/views/partials/navbar-top.ejs
@@ -2,10 +2,8 @@
 <nav class="navbar fixed-top navbar-expand-md navbar-dark" id="navbar-top">
   <!-- Container to center navbar contents -->
   <div class="container">
-    <!-- Puck logo Joe -->
-    <a class="navbar-brand" href="/">
-      <!-- <img src="images/logo_navbar-180x30.png" class="border border-info img-fluid rounded-lg" alt="Hockeyrats navbar logo"> -->
-      <img src="images/logo_navbar-240x40.png" class="border border-info img-fluid rounded-lg" alt="Hockeyrats navbar logo">
+    <a class="navbar-brand pr-3" href="/">
+      <img src="images/logo_navbar-240x40.png" class="border border-info img-fluid rounded-lg" alt="Woohan Hockey logo">
     </a>
 
     <!-- Navbar toggler/hamburger for smaller screens sizes -->
@@ -23,7 +21,7 @@
           <a class="nav-link" href="/about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/lessons">Lessons</a>
+          <a class="nav-link" href="/lessons">Media</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/contact">Contact</a>
@@ -43,7 +41,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://www.instagram.com/icelandskatingcenter/" target="_blank" rel="noreferrer noopener">
+          <a class="nav-link" href="https://www.instagram.com/iceland6ammcdavid/" target="_blank" rel="noreferrer noopener">
             <p class="d-inline d-md-none">Instagram</p>
             <i class="fab fa-instagram-square fa-lg d-none d-md-inline"></i>
           </a>
