--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,14 @@
 <html lang="en-US">
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <!-- TODO: Add script -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161006658-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-161006658-2');
+  </script>
 
   <!-- Required meta tags -->
   <meta charset="UTF-8">
