--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -41,7 +41,10 @@
   <!-- <meta name="twitter:site" content="@site_username"> -->
 
   <!-- Bad Script from Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet"> -->
+
+  <!-- Oswald from Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;500;700&display=swap" rel="stylesheet">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
