Make index header responsive to screen size

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
   <!-- Top navbar -->
   <%- include("partials/navbar-top.ejs") %>
 
-  <h1 class="display-4 text-warning font-weight-bolder text-center pt-5 mt-5">Prove Them Wrong</h1>
+  <h1 class="display-4 text-warning font-weight-bolder text-center pt-2 mt-2 pt-md-5 mt-md-5">Prove Them Wrong</h1>
 
   <div class="container d-flex justify-content-center" id="deke-div-index">
     <a class="btn btn-warning btn-lg" href="/lessons" role="button">Discover Dekes</a>
