--- a/views/about.ejs
+++ b/views/about.ejs
@@ -11,27 +11,22 @@
     <h1 class="display-4 text-center mb-5">About Us</h1>
 
     <div class="row align-items-start">
-      <!-- Image of Coach Wagner -->
+      <!-- Image of kneeling Nash -->
       <div class="col-md mb-4">
-        <!-- <img src="images/joe-wagner-about_medium.jpg" alt="Coach Wagner, chief of Hockeyrats" class="img-fluid shadow border border-info rounded-lg"> -->
-
-        <img src="images/joe-wagner-about-carmine-3x4_medium.jpg" alt="Coach Wagner, chief of Hockeyrats" class="img-fluid shadow border border-info rounded-lg">
+        <img src="images/nash-square_winter_medium.jpg" alt="Coach Wagner, chief of Hockeyrats" class="img-fluid shadow border border-info rounded-lg">
       </div>
 
       <!-- About page text -->
       <div class="col-md my-4">
-        <blockquote class="blockquote text-center pb-2">
-          <p><strong>Hockey rat</strong>, <em>noun</em></p>
-          <p>Someone whose life revolves around playing hockey.</p>
-        </blockquote>
+        <h4 class="text-center font-weight-bold pb-2">Limits only exist in your mind.</h4>
 
         <hr class="border-top border-light pb-3">
 
-        <p class="pb-3">Hockeyrats is home to players who are fanatical about improving their game. We know the early morning grind leads to late-night victories.</p>
+        <p class="pb-3">Woohan Hockey is home to aspiring NHLers and the sickest dekes. We know that the price of success is hard work.</p>
 
-        <p class="pb-3">We believe in honing the fundamentals rather than practicing complex drills. We pioneered the <a href="/lessons" class="text-info" target="_blank" rel="noreferrer noopener">R.A.T.S. Hockey Training System</a> to guide players from the Mini Mite to Senior levels towards greatness.</p>
+        <p class="pb-3">We believe that winners are ordinary people with extraordinary determination. At Woohan Hockey, we hustle until we no longer have to introduce ourselves.</p>
 
-        <p class="pb-3">Joe Wagner presides as the Chief Hockey Rat. He is a premier hockey instructor at <a href="http://www.ice-land.com/home" class="text-info" target="_blank" rel="noreferrer noopener">Ice Land</a> in Hamilton Township, NJ with over 20 years of experience.</p>
+        <p class="pb-3">Be a game changer. The world is already filled with players.</p>
 
       </div>
     </div>
