--- a/views/partials/navbar-top.ejs
+++ b/views/partials/navbar-top.ejs
@@ -21,7 +21,7 @@
           <a class="nav-link" href="/about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/lessons">Media</a>
+          <a class="nav-link" href="/media">Media</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/contact">Contact</a>
