--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header.ejs") %>
 
-<body class="body-about">
+<body>
   <!-- Top navbar -->
   <%- include("partials/navbar-top.ejs") %>
 
