--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header.ejs") %>
 
-<body class="body-index">
+<body id="body-index">
   <!-- Top navbar -->
   <%- include("partials/navbar-top.ejs") %>
 
