--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -5,21 +5,13 @@
   <%- include("partials/navbar-top.ejs") %>
 
   <!-- Contact Information -->
-  <div class="container my-2 justify-content-center">
-    <h1 class="display-4 text-center mb-4">Contact</h1>
+  <div class="container my-5 justify-content-center">
+    <h1 class="display-4 text-center mb-5">Contact</h1>
 
     <div class="container col-10 col-md-8 col-xl-7">
-      <p>For inquiries, please reach me at:</p>
-      <ul>
-        <li>
-          Call/Text <a class="text-info" href="tel:+19088120636">(908) 812-0636</a>
-        </li>
-        <li>
-          <a class="text-info" href="mailto:josephwagner74@yahoo.com">josephwagner74@yahoo.com</a>
-        </li>
-      </ul>
+      <p class="lead">For inquiries, please connect with us through Instagram: <a class="text-info" href="https://www.instagram.com/iceland6ammcdavid/" target="_blank" rel="noreferrer noopener">@iceland6ammcdavid</a></p>
 
-      <h3>Ice Land Rink</h3>
+      <h3 class="display-4 text-center py-4 my-4">Ice Land Rink</h3>
       <ul>
         <li>
           Call <a class="text-info" href="tel:+16095886672">(609) 588-6672</a>
@@ -32,7 +24,7 @@
   </div>
 
   <!-- Map of Ice Land -->
-  <div class="container d-flex justify-content-center">
+  <div class="container d-flex justify-content-center mb-5">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3044.3807182200862!2d-74.67969408423373!3d40.26729227263761!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3e1f1a9963a49%3A0x43aeebab848f9d68!2sIce%20Land%20Skating%20Center!5e0!3m2!1sen!2sus!4v1583028068132!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" class="d-block d-md-none col-10"></iframe>
 
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3044.3807182200862!2d-74.67969408423373!3d40.26729227263761!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3e1f1a9963a49%3A0x43aeebab848f9d68!2sIce%20Land%20Skating%20Center!5e0!3m2!1sen!2sus!4v1583028068132!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" class="d-none d-md-block d-lg-none col-md-8"></iframe>
