Rename content titles in media.ejs

--- a/views/media.ejs
+++ b/views/media.ejs
@@ -5,7 +5,7 @@
   <%- include("partials/navbar-top.ejs") %>
 
   <div class="container justify-content-center py-3 my-2">
-    <h1 class="display-4 text-center mb-5">Hockey Training Videos</h1>
+    <h1 class="display-4 text-center mb-5">Training Videos</h1>
 
     <div class="container justify-content-center row-cols-1 mb-5">
       <div class="embed-responsive embed-responsive-16by9 col pb-2 mb-2">
@@ -25,7 +25,7 @@
       </div>
     </div>
 
-    <h1 class="display-4 text-center my-5">Woohan Hockey Gallery</h1>
+    <h1 class="display-4 text-center my-5">Gallery</h1>
 
     <div id="carouselIndicators" class="carousel slide mb-4" data-ride="carousel">
       <ol class="carousel-indicators">
