Minor modifications to text in about.ejs

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -18,15 +18,15 @@
 
       <!-- About page text -->
       <div class="col-md my-4">
-        <h4 class="text-center font-weight-bold pb-2">Limits only exist in your mind.</h4>
+        <h4 class="text-center font-weight-bold pb-2">Limits only exist in your mind</h4>
 
         <hr class="border-top border-light pb-3">
 
-        <p class="pb-3">Woohan Hockey is home to aspiring NHLers and the sickest dekes. We know that the price of success is hard work.</p>
+        <p class="pb-3">Woohan Hockey is home to D1 hopefuls and the sickest dekes.</p>
 
-        <p class="pb-3">We believe that winners are ordinary people with extraordinary determination. At Woohan Hockey, we hustle until we no longer have to introduce ourselves.</p>
+        <p class="pb-3">We believe that winners are ordinary people with extraordinary determination. We know that the price of success is hard work, so we hustle until we no longer have to introduce ourselves.</p>
 
-        <p class="pb-3">Be a game changer. The world is already filled with players.</p>
+        <p class="pb-3">Be a game changer, the world is already filled with enough players.</p>
 
       </div>
     </div>
