Split instagram tag into separate line in media.ejs

--- a/views/media.ejs
+++ b/views/media.ejs
@@ -7,7 +7,8 @@
   <div class="container justify-content-center py-3 my-2">
     <h1 class="display-4 text-center mb-5">Training Videos</h1>
 
-    <p class="lead text-center mb-3">For more Woohan Hockey content, connect with us: <a class="text-info" href="https://www.instagram.com/iceland6ammcdavid/" target="_blank" rel="noreferrer noopener"><i class="fab fa-instagram mx-1"></i>@iceland6ammcdavid</a></p>
+    <p class="lead text-center mb-0">For more Woohan Hockey content, connect with us at</p>
+    <p class="lead text-center mb-3"><a class="text-info" href="https://www.instagram.com/iceland6ammcdavid/" target="_blank" rel="noreferrer noopener"><i class="fab fa-instagram mr-2"></i>@iceland6ammcdavid</a></p>
 
     <div class="container justify-content-center row-cols-1 mb-5">
       <div class="embed-responsive embed-responsive-16by9 col pb-2 mb-2">
