--- a/views/partials/navbar-top.ejs
+++ b/views/partials/navbar-top.ejs
@@ -31,25 +31,13 @@
       <!-- Toggler/hamburger dropdown divider between left and right side links -->
       <div class="dropdown-divider d-block d-md-none"></div>
 
-      <!-- Navbar right: External links (Facebook, Instagram, Twitter) -->
+      <!-- Navbar right: Instagram -->
       <!-- Text-only until md screen size then logo-only for larger screens -->
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="https://www.facebook.com/icelandskating/" target="_blank" rel="noreferrer noopener">
-            <p class="d-inline d-md-none">Facebook</p>
-            <i class="fab fa-facebook-square fa-lg d-none d-md-inline"></i>
-          </a>
-        </li>
         <li class="nav-item">
           <a class="nav-link" href="https://www.instagram.com/iceland6ammcdavid/" target="_blank" rel="noreferrer noopener">
             <p class="d-inline d-md-none">Instagram</p>
             <i class="fab fa-instagram-square fa-lg d-none d-md-inline"></i>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://twitter.com/icelandhamilton"  target="_blank" rel="noreferrer noopener">
-            <p class="d-inline d-md-none">Twitter</p>
-            <i class="fab fa-twitter-square fa-lg d-none d-md-inline"></i>
           </a>
         </li>
       </ul>
