Swap Cornell hockey photo with Unsplash in about.ejs

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -41,8 +41,8 @@ body {
 }
 
 #jumbotron-about {
-  /* Group photo */
-  background-image: url("./../images/cornell_hockey-aquatic_cropped.jpg");
+  /* Photo by Markus Spiske on Unsplash */
+  background-image: url("./../images/hockey-fight_winter_medium.jpg");
 
   background-position: center top;
   background-size: cover;
