Update images and references to Woo Han Hockey

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -13,7 +13,7 @@
     <div class="row align-items-start">
       <!-- Image of kneeling Nash -->
       <div class="col-md mb-4">
-        <img src="images/nash-square_winter_medium.jpg" alt="Coach Wagner, chief of Hockeyrats" class="img-fluid shadow border border-info rounded-lg">
+        <img src="images/nash-square_winter_medium.jpg" alt="Riley Nash look-alike kneeling on ice" class="img-fluid shadow border border-info rounded-lg">
       </div>
 
       <!-- About page text -->
@@ -22,7 +22,7 @@
 
         <hr class="border-top border-light pb-3">
 
-        <p class="pb-3">Woohan Hockey is home to D1 hopefuls and the sickest dekes.</p>
+        <p class="pb-3">Woo Han Hockey is home to D1 hopefuls and the sickest dekes.</p>
 
         <p class="pb-3">We believe that winners are ordinary people with extraordinary determination. We know that the price of success is hard work, so we hustle until we no longer have to introduce ourselves.</p>
 
