--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,15 +17,15 @@
 
   <!-- CMS/SEO -->
   <meta name="author" content="Jeffry Lew">
-  <meta name="description" content="Woohan Hockey is the home of D1 hopefuls and the sickest dekes">
+  <meta name="description" content="Woo Han Hockey is the home of D1 hopefuls and the sickest dekes">
 
   <!-- Facebook card -->
-  <meta property="og:site_name" content="Woohan Hockey">
+  <meta property="og:site_name" content="Woo Han Hockey">
   <meta property="og:url" content="http://www.woohanhockey.com/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Woohan Hockey">
+  <meta property="og:title" content="Woo Han Hockey">
   <meta property="og:description" content="The home of D1 hopefuls and the sickest dekes">
-  <meta property="og:image" content="https://raw.githubusercontent.com/jeffrylew/joe_wagner-hockey/master/media/woohan_fb-event_medium_logo.jpg">
+  <meta property="og:image" content="https://raw.githubusercontent.com/jeffrylew/joe_wagner-hockey/master/media/woo_han_fb-event_medium_logo.jpg">
   <meta property="og:image:width" content="4032">
   <meta property="og:image:height" content="2268">
   <meta property="og:image:alt" content="Seong stickhandling">
@@ -34,9 +34,9 @@
 
   <!-- Twitter card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Woohan Hockey">
+  <meta name="twitter:title" content="Woo Han Hockey">
   <meta name="twitter:description" content="The home of D1 hopefuls and the sickest dekes">
-  <meta name="twitter:image" content="https://raw.githubusercontent.com/jeffrylew/joe_wagner-hockey/master/media/woohan_twtr_medium_logo.jpg">
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/jeffrylew/joe_wagner-hockey/master/media/woo_han_twtr_medium_logo.jpg">
   <meta name="twitter:image:alt" content="Seong stickhandling">
   <!-- <meta name="twitter:site" content="@site_username"> -->
 
@@ -58,6 +58,6 @@
   <!-- Favicon accompanying title -->
   <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
 
-  <title>Woohan Hockey</title>
+  <title>Woo Han Hockey</title>
 
 </head>
