--- a/views/partials/navbar-top.ejs
+++ b/views/partials/navbar-top.ejs
@@ -3,7 +3,7 @@
   <!-- Container to center navbar contents -->
   <div class="container">
     <a class="navbar-brand pr-3" href="/">
-      <img src="images/logo_navbar-240x40.png" class="border border-info img-fluid rounded-lg" alt="Woohan Hockey logo">
+      <img src="images/logo_navbar-240x40.png" class="border border-info img-fluid rounded-lg" alt="Woo Han Hockey logo">
     </a>
 
     <!-- Navbar toggler/hamburger for smaller screens sizes -->
