Edit about.ejs according to Seong's direction

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -18,15 +18,32 @@
 
       <!-- About page text -->
       <div class="col-md my-4">
-        <h4 class="text-center font-weight-bold pb-2">Limits only exist in your mind</h4>
+        <h4 class="text-center font-weight-bold pb-2">Woo Han & <img src="https://img.icons8.com/ios/50/000000/corn.png"/>hole</h4>
 
-        <hr class="border-top border-light pb-3">
+        <hr class="border-top border-light pb-2">
 
-        <p class="pb-3">Woo Han Hockey is home to D1 hopefuls and the sickest dekes.</p>
+        <p class="pb-2">It's unfortunate that I was born in and spent the majority of my youth in a land devoid of hockey. Despite occasional forays into my life during language summer camps in Canada, high school and college in upstate NY, hockey had to wait for 27 years to properly introduce itself to me.</p>
 
-        <p class="pb-3">We believe that winners are ordinary people with extraordinary determination. We know that the price of success is hard work, so we hustle until we no longer have to introduce ourselves.</p>
+        <p class="pb-2">It started during the second half of my mandatory conscription in South Korea. Being a Cornell graduate, I developed an interest in their hockey program and their No. 1 status in the nation according to the USCHO poll toward the end of their 2017-18 season. I was like "What? There is an area where, whether in sports or academics they are ranked No. 1 in the nation?"</p>
+        
+        <p class="pb-2">Not knowing the relative lack of rigor of the EZAC, I for a short period of time, took a great deal of pride in their No. 1 status. That is, until their season came to an unexpected end. Their season suddenly fizzled out after a crushing defeat to the Princeton Tigers in the EZAC semifinal and 1st round exit at the hands of the BU Terriers.</p>
 
-        <p class="pb-3">Be a game changer, the world is already filled with enough players.</p>
+        <p class="pb-2">So I quickly became disillusioned with the state of Cornell Hockey. Also, reading a bit about Cornell Hockey history made me realize their program is mediocre at best. No NCAA championship since 1970 when there are only a handful of hockey programs? Don't think I can say that's the resume of a competitive hockey program. Regardless, I developed a genuine interest in hockey.</p>
+
+        <p class="pb-1">In the Korean language, there is a concept of an emotion named <strong>"Han"</strong>:</p>
+
+        <blockquote class="blockquote text-center pb-2">
+          <p class="mb-0">Some form of grief or resentment, among others, that has been said to be a characteristic of Korean culture.</p>
+          <footer class="blockquote-footer"><cite title="Wikipedia">Wikipedia</cite></footer>
+        </blockquote>
+
+        <p class="pb-2">My middle name is Woo and I happen to have a great deal of frustration in relation to how I had no exposure to hockey growing up. Given my advanced age, I have been written off as someone with no potential to play hockey at a competitive level.</p>
+
+        <p class="lead font-weight-bold pb-5">I refuse to let what others see in me define me. I intend to channel my "Han" into a solid NHL career. This is how <a class="text-info" href="http://www.woohanhockey.com" target="_blank" rel="noreferrer noopener">Woo Han Hockey</a> came about.</p>
+
+        <div class="container text-center">
+          <a href="https://icons8.com/icon/12565/corn" class="font-weight-light text-secondary pb-5">Corn icon by Icons8</a>
+        </div>
 
       </div>
     </div>
